Fix display/usage of categories in master backlog and show in taskboard
now using grid layout. IE/edge do not support grid (yet) so editor doesn't look fancy in IE/Edge.

--- a/assets/stylesheets/global.css
+++ b/assets/stylesheets/global.css
@@ -97,6 +97,11 @@ body.loading #refresh{
 .editors{
   display:none;
 }
+
+.editing .editors {
+  display: block;
+}
+
 .ui-dialog .editor{
   display:block;
 }
@@ -108,6 +113,9 @@ ul.ui-sortable {
   display:none;
 }
 
+.story .category {
+	font-style: italic;
+}
 
 /* drag-drop effect: disabled dropzones are greyed out */
 .rb-sortable-disabled,
